--- a/01- intro-python/Archivos.ipynb
+++ b/01- intro-python/Archivos.ipynb
@@ -70,7 +70,8 @@
     "    archivo_escritura_abierto.writelines([\"buenas madrugadas1\\n\",\"buena medianoche1\\n\",\"hola perinola1\\n\"])\n",
     "    archivo_escritura_abierto.close\n",
     "except Exception as error:\n",
-    "    print(f\"error {error}\")\n"
+    "    print(f\"error {error}\")\n",
+    "    \n"
    ]
   },
   {
