CRUD de agentes de credito y clientes en archivos

--- a/01- intro-python/Untitled.ipynb
+++ b/01- intro-python/Untitled.ipynb
@@ -27,6 +27,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ingrese el nombre del cliente:pedro\n",
+      "pedro\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
