--- a/02-numpy/01-introduccion.ipynb
+++ b/02-numpy/01-introduccion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,9 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
