--- a/02- numpy/01-introduccion.ipynb
+++ b/02- numpy/01-introduccion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "        [0., 0., 0., 0., 0., 0., 0., 0.]]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,22 +185,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0,  2,  4,  6,  8, 10, 12, 14, 16, 18])"
+       "array([ 0,  5, 10, 15, 20, 25])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.arange(0,20,2) # del 0 al 20 de 2 en 2"
+    "np.arange(0,30,5) # del 0 al 20 de 2 en 2"
    ]
   },
   {
@@ -247,20 +247,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 3, 4)\n"
+      "(2, 3, 4)\n",
+      "3\n"
      ]
     }
    ],
    "source": [
-    "arreglo_tres_dimensiones= np.zeros([2,3,4])\n",
-    "print(arreglo_tres_dimensiones.shape) #Obtener las dimensiones de un arreglo multidimensional"
+    "arreglo_tres_dimensiones= np.zeros((2,3,4))\n",
+    "print(arreglo_tres_dimensiones.shape) #Obtener las dimensiones de un arreglo multidimensional\n",
+    "print(np.ndim(arreglo_tres_dimensiones))"
    ]
   },
   {
@@ -335,26 +337,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 5, 5])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = np.array([10,10,10])\n",
-    "b = np.array([5,5,5])"
+    "b = np.array((5,5,5))\n",
+    "b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([50, 50, 50])"
+       "array([15, 15, 15])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,9 +382,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 5, 5])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#resta\n",
     "a-b"
@@ -376,9 +403,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([50, 50, 50])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#multiplicacion\n",
     "a*b"
@@ -407,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +454,7 @@
        "array([0, 0, 0], dtype=int32)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +747,7 @@
        "         [22, 23]]]])"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,10 +786,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -763,13 +799,13 @@
        "        [54, 57]]])"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a_24.reshape(2,3,2,2).sum(axis=1)"
+    "a_24.sum(axis=1)"
    ]
   }
  ],
