--- a/02- numpy/02 - Universal functions.ipynb
+++ b/02- numpy/02 - Universal functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,13 +134,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([23, 30, 28, 19, 21])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#El numero de enteros positivos contando con el cero\n",
     "arreglo_random = np.random.randint(10) # 10 enteros de 0-9\n",
-    "arreglo_random"
+    "arreglo_random\n",
+    "arreglo_random1 = np.random.randint(15,35,5)\n",
+    "arreglo_random1"
    ]
   },
   {
