Actualiza texto informe

--- a/Informe1b/Informe INEC.ipynb
+++ b/Informe1b/Informe INEC.ipynb
@@ -101,7 +101,7 @@
     "La fuente de datos utilizada se encuentra en formato SPSS, por tanto se usa la librería **pyreadstat** que permite la carga de archivos con formato .sav\n",
     "\n",
     "```\n",
-    "path_sav=\"C:\\\\Users\\\\PedroW10\\\\Downloads\\\\BDD_ENEMDU_2019_06_SPSS\\\\BDD_ENEMDU_2019_06_SPSS\\\\201906_EnemduBDD_15anios.sav\"\n",
+    "path_sav=\"201906_EnemduBDD_15anios.sav\"\n",
     "df_3, meta = pyreadstat.read_sav(path_sav,apply_value_formats=True)\n",
     "```\n",
     "---\n",
