Actualiza proyecto segundo bimestre

--- a/Informe2b-scrapy/informe_jupyter/Informe_scrapy_mercadol.ipynb
+++ b/Informe2b-scrapy/informe_jupyter/Informe_scrapy_mercadol.ipynb
@@ -83,27 +83,34 @@
     "\n",
     "\n",
     "## DESARROLLO  - WEB SCRAPING\n",
+    " Para el desarrollo de web scraping se usan las librerías\n",
+    "+ import scrapy\n",
+    "+ from scrapy_mercadol.items import ProductoMercadol\n",
+    "+ from scrapy.loader import ItemLoader\n",
+    "+ from scrapy.loader.processors import TakeFirst\n",
+    "+ from scrapy.spiders import CrawlSpider, Rule\n",
+    "+ from scrapy.linkextractors import LinkExtractor\n",
     "\n",
+    "**Elementos del proyecto Scrapy usados**\n",
+    "```\n",
+    "Dominio base: listado.mercadolibre.com.ec\n",
+    "Lista de URLs: http://home.mercadolibre.com.ec/[NOMBRE CATEGORIA]\n",
+    "items.py : Crea una estructura específica para cada item\n",
+    "pipelines.py : Realiza el filtro de items estandarizados\n",
+    "settings.py : Establece el orden de ejecución de los pipelines y determina una ruta para descargar los datos\n",
+    "```\n",
     "___\n",
     "## GRÁFICAS\n",
     "\n",
-    "### Librerías\n",
+    "#### LIBRERÍAS\n",
     "+ import numpy as np\n",
     "+ import pandas as pd\n",
     "+ import matplotlib.pyplot as plt\n",
     "+ import pyreadstat\n",
     "\n",
-    "**Código para cargar los datos usando pyreadstat**\n",
     "\n",
-    "La fuente de datos utilizada se encuentra en formato SPSS, por tanto se usa la librería **pyreadstat** que permite la carga de archivos con formato .sav\n",
-    "\n",
-    "```\n",
-    "path_sav=\"201906_EnemduBDD_15anios.sav\"\n",
-    "df_3, meta = pyreadstat.read_sav(path_sav,apply_value_formats=True)\n",
-    "```\n",
     "---\n",
     "\n",
-    "### GRÁFICOS\n",
     "\n",
     "####  1. GRAFICO DE SECTORES: PORCENTAJE DE ARTÍCULOS POR CATEGORIA\n",
     "\n",
